fix: panel overlapping chip

--- a/src/elements/teaser-hero/teaser-hero.scss
+++ b/src/elements/teaser-hero/teaser-hero.scss
@@ -72,5 +72,5 @@ sbb-image {
 ::slotted([slot='chip']) {
   position: absolute;
   inset: var(--sbb-teaser-hero-chip-inset);
-  z-index: 1;
+  z-index: 2;
 }
